--- a/default.hbs
+++ b/default.hbs
@@ -23,6 +23,7 @@
 
     {{ghost_foot}}
     
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
     <script> 
       var max_pages = parseInt('{{pagination.pages}}');
