--- a/post.hbs
+++ b/post.hbs
@@ -77,20 +77,9 @@
 		</footer>
 
 		<section class="comments-post">
-			<div id="disqus_thread"></div>
+			<!-- Disqus Comments -->
+			
 		</section>
-
-		<script type="text/javascript">
-		    /* * * CONFIGURATION VARIABLES * * */
-		    var disqus_shortname = 'germanencinas';
-		    
-		    /* * * DON'T EDIT BELOW THIS LINE * * */
-		    (function() {
-		        var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-		        dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-		        (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-		    })();
-		</script>
 
 		{{/post}}
   	</article>
